<resources>
    <string name="app_name">Bike Assist</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fuel">Fuel</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_trip">Trip</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
