<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawernew.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fuel"
        android:name="com.example.navdrawernew.ui.fuel.FuelFragment"
        android:label="@string/menu_fuel"
        tools:layout="@layout/fragment_fuel" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navdrawernew.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_trip"
        android:name="com.example.navdrawernew.ui.trip.TripFragment"
        android:label="@string/menu_trip"
        tools:layout="@layout/fragment_trip" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navdrawernew.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.navdrawernew.ui.about.AboutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>