<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fuel"
            android:icon="@drawable/ic_local_gas_station_black_24dp"
            android:title="@string/menu_fuel" />
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/menu_trip" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="About" />
        </menu>
    </item>

</menu>
